tests/baselines/reference/additionOperatorWithNullValueAndInvalidOperator.errors.txt
==== tests/cases/compiler/additionOperatorWithNullValueAndInvalidOperator.ts (11 errors) ====
    // If one operand is the null or undefined value, it is treated as having the type of the other operand.
    
    function foo(): void { return undefined }
    
    var a: boolean;
    var b: Object;
    var c: void;
    var d: Number;
    
    // null + boolean/Object
    var r1 = null + a;
             ~~~~
!!! additionOperatorWithNullValueAndInvalidOperator.ts(11,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r2 = null + b;
             ~~~~
!!! additionOperatorWithNullValueAndInvalidOperator.ts(12,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r3 = null + c;
             ~~~~
!!! additionOperatorWithNullValueAndInvalidOperator.ts(13,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r4 = a + null;
             ~
!!! additionOperatorWithNullValueAndInvalidOperator.ts(14,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r5 = b + null;
             ~
!!! additionOperatorWithNullValueAndInvalidOperator.ts(15,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r6 = null + c;
             ~~~~
!!! additionOperatorWithNullValueAndInvalidOperator.ts(16,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
    // other cases
    var r7 = null + d;
             ~~~~
!!! additionOperatorWithNullValueAndInvalidOperator.ts(19,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r8 = null + true;
             ~~~~
!!! additionOperatorWithNullValueAndInvalidOperator.ts(20,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r9 = null + { a: '' };
             ~~~~
!!! additionOperatorWithNullValueAndInvalidOperator.ts(21,10): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r10 = null + foo();
              ~~~~
!!! additionOperatorWithNullValueAndInvalidOperator.ts(22,11): error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r11 = null + (() => { });
              ~~~~
!!! additionOperatorWithNullValueAndInvalidOperator.ts(23,11): error TS2111: Invalid '+' expression - types not known to support the addition operator.